pods/new-kube/name_space.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: aziz
spec: {}
status: {}
