pods/new-kube/centos.yaml
#kubectl run centos --image=centos --restart=Never --dry-run -o yaml --command -- env > centos.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: centos
  name: centos
spec:
  containers:
  - command:
    - env
    image: centos
    name: centos
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
