pods/new-kube/deployment-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels: 
     app: myapp
     type: front-end
spec:
  template:
    metadata:
      name: aziztest
      labels: 
        app: myapp
        type: front-end
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
        
        - name: backend-container
          image: redis
  replicas: 3
  selector: 
    matchLabels:
      type: front-end
