pods/new-kube/example1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapps
  labels:
    app: cronos
spec:
  template:
    metadata: 
      name: myapps
      labels:
        app: cronos
    spec:
      containers:
        - name: httpd
          image: httpd:2.4-alpine
        - name: redis
          image: redis
  selector:
    matchLabels:
      app: cronos
  replicas: 3
