pods/new-kube/my-config-map.yml
apiVersion: v1
kind: Pod
metadata:
  name: aziztest
  labels: 
     app: myapp
     type: back-end
spec:
  containers:
    - name: nginx-container
      image: nginx
    
    - name: aziztest
      image: nginx
