pods/new-kube/payroll.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-08-09T19:06:20Z"
  labels:
    run: payroll
  name: payroll
  namespace: default
  resourceVersion: "843200"
  selfLink: /api/v1/namespaces/default/pods/payroll
  uid: a03c866e-1d7d-4c22-86f4-048817812cca
spec:
  containers:
  - image: httpd
    imagePullPolicy: Always
    name: payroll
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-dg8bd
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-dg8bd
    secret:
      defaultMode: 420
      secretName: default-token-dg8bd
status:
  phase: Pending
  qosClass: BestEffort
