pods/new-kube/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: httpd
    image: httpd
    ports:
      - containerPort: 8080
