pods/new-kube/pod_definition.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-08-04T03:31:05Z"
  generateName: myapps-5b644fdc4c-
  labels:
    app: cronos
    pod-template-hash: 5b644fdc4c
  name: myapps-5b644fdc4c-qbxhd
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: myapps-5b644fdc4c
    uid: ac5df0db-ae86-4e7d-9992-76dabc8e68a4
  resourceVersion: "533442"
  selfLink: /api/v1/namespaces/default/pods/myapps-5b644fdc4c-qbxhd
  uid: 1a92e025-6307-49cf-8d81-e5ad59d54f4d
spec:
  containers:
  - envFrom:
    - configMapRef:
        name: appcolor
    image: httpd:2.4-alpine
    imagePullPolicy: IfNotPresent
    name: httpd
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-dg8bd
      readOnly: true
  - image: redis
    imagePullPolicy: Always
    name: redis
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-dg8bd
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: docker-desktop
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-dg8bd
    secret:
      defaultMode: 420
      secretName: default-token-dg8bd
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-08-04T03:31:05Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-08-04T03:31:09Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-08-04T03:31:09Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-08-04T03:31:05Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://4c1ac7ba1567f044c2184872a8239dbb39decf9ee5be3bcdb068bc8b4e481ed2
    image: httpd:2.4-alpine
    imageID: docker-pullable://httpd@sha256:834d4ea86871e7ef849a62b7adcdd23580b8cf8b8b716ef0088da7ac2bdf2eb5
    lastState: {}
    name: httpd
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-08-04T03:31:06Z"
  - containerID: docker://a0d6ec2333c2e6045a93ccf032d0248f13a49bc4a99f46ad950e8942c7775e39
    image: redis:latest
    imageID: docker-pullable://redis@sha256:d86d6739fab2eaf590cfa51eccf1e9779677bd2502894579bcf3f80cb37b18d4
    lastState: {}
    name: redis
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-08-04T03:31:08Z"
  hostIP: 192.168.65.3
  phase: Running
  podIP: 10.1.1.187
  podIPs:
  - ip: 10.1.1.187
  qosClass: BestEffort
  startTime: "2020-08-04T03:31:05Z"
