pods/new-kube/update.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-08-06T20:32:33Z"
  labels:
    run: nginx
  name: nginx
  namespace: default
  resourceVersion: "750732"
  selfLink: /api/v1/namespaces/default/pods/nginx
  uid: 91d084fb-9f4b-42dc-96e5-7dbcffad3815
spec:
  containers:
  - image: nginx:alpine
    imagePullPolicy: Always
    name: nginx
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-dg8bd
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: docker-desktop
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-dg8bd
    secret:
      defaultMode: 420
      secretName: default-token-dg8bd
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-08-06T20:32:33Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-08-06T20:32:35Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-08-06T20:32:35Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-08-06T20:32:33Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://cdfdd6f3f072e2121c780c01a5a49ba91c046ffe3e1aa657f507c2abb164925c
    image: nginx:latest
    imageID: docker-pullable://nginx@sha256:36b74457bccb56fbf8b05f79c85569501b721d4db813b684391d63e02287c0b2
    lastState: {}
    name: nginx
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-08-06T20:32:35Z"
  hostIP: 192.168.65.3
  phase: Running
  podIP: 10.1.2.147
  podIPs:
  - ip: 10.1.2.147
  qosClass: BestEffort
  startTime: "2020-08-06T20:32:33Z"
