pods/new-kube/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    name: cronos
  ports:
    type: NodePort
    ports:
      - targetPort: 80
        port: 80
        nodePort: 30008
