pods/new-kube/network-policy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: backend-app
spec:
  podSelector:
    matchLabels:
      name: backend-app
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: backend-app
      ports:
        - protocol: TCP
          port: 80
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
